welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ')' expected but 'else' found.
  }else if (10-a<10-b){
   ^